# git-switch

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  cliff.toml  index.html  install.ps1  install.sh  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  platform.rs  tray.rs
src-tauri/src/fs/: commands.rs  mod.rs  watcher.rs
src-tauri/src/git/: commands.rs  error.rs  mod.rs  runner.rs  service.rs  types.rs
src-tauri/src/process/: commands.rs  mod.rs  runner.rs
src-tauri/src/repository/: commands.rs
src/app/: App.tsx
src/components/: AccentPicker.tsx  BranchCombobox.tsx  BranchSelector.tsx  ChangedFilesPanel.tsx  CloneDialog.tsx  CommandOutputPanel.tsx  CommitHistoryDialog.tsx  CommitHistoryPanel.tsx  CommitPanel.tsx  ConfirmDialog.tsx  CreateBranchDialog.tsx  DashboardErrorBoundary.tsx  DiffDialog.tsx  GitActionsPanel.tsx  GroupDashboard.tsx  GroupDialog.tsx  IconHint.tsx  LiveTerminal.tsx  Logo.tsx  LogoSpinner.tsx  ProcessOutputPanel.tsx  RepositoryDashboard.tsx  RepositoryPicker.tsx  RepositorySidebar.tsx  RepositorySidebarRow.tsx  RunConfigDialog.tsx  RunPanel.tsx  SettingsDialog.tsx  SidebarFooter.tsx  StatusLegend.tsx  ThemeToggle.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  popover.tsx  select.tsx  sonner.tsx  textarea.tsx  tooltip.tsx
src/hooks/: use-app-version.ts  use-background-fetch.ts  use-file-drop.ts  use-file-watcher.ts  use-git-operations.ts  use-keyboard-shortcuts.ts  use-mark-app-ready.ts  use-process.ts  use-repo-run-state.ts  use-settings.ts  use-theme.ts  use-tray-status.ts  use-window-focus.ts
src/lib/: format.ts  gemini.ts  git-client.ts  platform.ts  process-client.ts  repository-from-path.ts  run-targets.ts  settings-store.ts  system.ts  theme-store.ts  types.ts
src/stores/: migrate-group-state.ts  migrate-repo-state.ts  use-app-ready-store.ts  use-command-log-store.ts  use-group-store.ts  use-repo-store.ts
