[package]
name = "git-switch"
version = "0.5.1"
description = "Local Git branch manager for macOS"
authors = ["Avijit Dey"]
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/Avijit07x/git-switch"

[lib]
name = "git_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
# Only `rt-multi-thread` is needed for our two `tokio::task::spawn_blocking`
# calls in process/runner.rs. The rest of our async surface goes through
# `tauri::async_runtime::spawn_blocking`, which is independent of these
# features. Tauri itself pulls in any tokio features it needs internally.
tokio = { version = "1", features = ["rt-multi-thread"] }
portable-pty = "0.9"

# Filesystem watcher: backend differs per OS. macOS gets FSEvents, Linux
# gets inotify (notify's default on Linux), Windows gets ReadDirectoryChangesW.
[target.'cfg(target_os = "macos")'.dependencies]
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }

[target.'cfg(target_os = "linux")'.dependencies]
notify = "7"

[target.'cfg(target_os = "windows")'.dependencies]
notify = "7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Smoke tests need a throwaway git repo. tempfile auto-cleans on drop so
# parallel test runs don't fight over filesystem state.
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
incremental = false
overflow-checks = false
